--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:cov": "jest --coverage"
   },
   "dependencies": {
+    "@prisma/client": "^2.25.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "lint-staged": "^11.0.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.1",
+    "prisma": "^2.25.0",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
