--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,20 @@
       {
         "ts": "never"
       }
+    ],
+    "class-methods-use-this": "off",
+    "no-useless-constructor": "off",
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": ["error"],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": true,
+        "optionalDependencies": false,
+        "peerDependencies": false
+      }
     ]
+
   },
   "settings": {
     "import/resolver": {
