--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@prisma/client": "^2.25.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.5.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
