--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@prisma/client": "^2.25.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.5.0"
   },
