refactor: improve error handler

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "emitDecoratorMetadata": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "strictNullChecks": true
   },
   "exclude": [
     "node_modules"
