--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,7 @@
 {
   "*.ts": [
     "eslint \"{src,test}/**/*.ts\" --fix",
-    "prettier --write \"src/**/*.ts\""
+    "prettier --write \"src/**/*.ts\"",
+    "yarn test:staged"
   ]
 }
