--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage"
+    "test:staged": "yarn test --findRelatedTests",
+    "test:watch": "yarn test --watch",
+    "test:cov": "yarn test --coverage"
   },
   "dependencies": {
     "@prisma/client": "^2.25.0",
