feat: ensure JsonWebTokenProvider calls sign with correct params

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=pub
 POSTGRES_USER=johndoe
 POSTGRES_PASSWORD=randompassword
 POSTGRES_DB=mydb
+
+JWT_ALGORITHM=
+JWT_PRIVATE_KEY=
+JWT_PUBLIC_KEY=
+TOKEN_EXPIRATION_TIME=
