--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
+    "test:unit": "yarn test -c jest-unit-config.ts",
     "test:staged": "yarn test --findRelatedTests",
     "test:watch": "yarn test --watch",
-    "test:cov": "yarn test --coverage"
+    "test:cov": "yarn test --coverage",
+    "test:coveralls": "yarn test:cov && coveralls < tests/coverage/lcov.info"
   },
   "dependencies": {
     "@prisma/client": "^2.25.0",
@@ -36,6 +38,7 @@
     "@types/node": "^15.12.4",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
+    "coveralls": "^3.1.1",
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
