ci: unit tests configuration

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -38,4 +38,5 @@ jobs:
       - name: Coveralls Report
         uses: coverallsapp/github-action@v1.1.2
         with:
+          path-to-lcov: './tests/coverage/lcov.info'
           github-token: ${{ secrets.GITHUB_TOKEN }}
