--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:unit": "yarn test -c jest-unit-config.ts",
+    "test:integration": "yarn test -c jest-integration-config.ts",
     "test:staged": "yarn test --findRelatedTests",
     "test:watch": "yarn test --watch",
     "test:cov": "yarn test --coverage",
@@ -36,6 +37,7 @@
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/node": "^15.12.4",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "coveralls": "^3.1.1",
@@ -52,6 +54,7 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.3.1",
     "prisma": "^2.25.0",
+    "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
