--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Run Unit Tests
         run: yarn test:unit
 
+      - name: Run Integration Tests
+        run: yarn test:integration
+
       - name: Run Test Coverage
         run: yarn test:cov
 
