--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "start:dev": "nodemon",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "jest --runInBand",
     "test:unit": "yarn test -c jest-unit-config.ts",
-    "test:integration": "yarn test -c jest-integration-config.ts",
+    "test:integration": "yarn test --watch -c jest-integration-config.ts",
     "test:staged": "yarn test --findRelatedTests",
     "test:watch": "yarn test --watch",
     "test:cov": "yarn test --coverage",
@@ -34,6 +34,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.12",
+    "@types/faker": "^5.5.6",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/node": "^15.12.4",
@@ -47,6 +48,7 @@
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
+    "faker": "^5.5.3",
     "husky": "^6.0.0",
     "jest": "^27.0.4",
     "jest-mock-extended": "^1.0.16",
