--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start:dev": "nodemon",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "pretest": "yarn prisma migrate dev",
     "test": "jest --runInBand",
     "test:unit": "yarn test -c jest-unit-config.ts",
     "test:integration": "yarn test --watch -c jest-integration-config.ts",
