--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "pretest": "yarn prisma migrate dev",
-    "test": "jest --runInBand",
+    "test": "jest --runInBand --no-cache",
     "test:unit": "yarn test -c jest-unit-config.ts",
     "test:integration": "yarn test --watch -c jest-integration-config.ts",
     "test:staged": "yarn test --findRelatedTests",
