--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "description": "API for appreciate people",
   "author": "Lemuel Coelho Zara",
   "scripts": {
+    "build": "yarn prisma generate && tsc",
     "start:dev": "nodemon",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "pretest": "yarn prisma migrate dev",
-    "test": "jest --runInBand --no-cache",
+    "db:push": "yarn prisma db push",
+    "test": "cross-env NODE_ENV=test jest --runInBand --no-cache",
     "test:unit": "yarn test -c jest-unit-config.ts",
     "test:integration": "yarn test --watch -c jest-integration-config.ts",
     "test:staged": "yarn test --findRelatedTests",
@@ -43,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "coveralls": "^3.1.1",
+    "cross-env": "^7.0.3",
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
